# backend-i

./: hello.py
classroom_management/: .dockerignore  Dockerfile  Makefile  README.MD  compose.yaml  flowchart.md  grades_student.html  manage.py  pyproject.toml  requirments.md  roadmap.md
classroom_management/.devcontainer/: devcontainer.json
classroom_management/classroom_management/: asgi.py  settings.py  urls.py  wsgi.py
classroom_management/etic/: admin.py  apps.py  forms.py  mixin.py  models.py  urls.py  views.py
classroom_management/etic/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
classroom_management/etic/templates/: base.html
classroom_management/etic/templates/admin/: admin_dashboard.html  confirm_delete.html  edit_classroom.html  edit_course.html
classroom_management/etic/templates/etic/: add_grades.html  admin_dashboard.html  grades_student.html  index.html
classroom_management/etic/templates/etic/teacher/: add_grades.html  student_list.html  teacher_dashboard.html
classroom_management/etic/templates/registration/: signin.html  signup.html
classroom_management/etic/templates/student/: dashboard.html
classroom_management/etic/templates/teacher/: add_grade.html  classroom_students.html  teacher_dashboard.html
classroom_management/tests/: test_views.py
session_10/: pyproject.toml
session_11/: pyproject.toml
session_12/: .dockerignore  Dockerfile  Makefile  README.md  compose.yaml  (+1 more)
session_6/: pyproject.toml
session_6/src/session_6/: challenge.py  exercise.py
session_6/tests/: test_factorial.py  test_multiplies.py  tutorial_test.py
(+59 files in other folders)
