[project]
name = "classroom-management"
version = "0.1.0"
description = ""
authors = [
    {name = "Nelson Zarate",email = "nelsonpinto1415@gmail.com"}
]
readme = "README.MD"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "django-pytest (>=0.2.0,<0.3.0)"
]

[tool.poetry]
packages = [{include = "classroom_management"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
