[project]
name = "session-6"
version = "0.1.0"
description = ""
authors = [
    {name = "Nelson Zarate",email = "nelson_zarate@eticalgarve.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "session_6", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
